Moving get all accounts balance for admin controller. added integration tests for update card fee.
