# src/integration-test/java/com/wearewaes/simple_bank_account/adapters/controllers/AccountsControllerIT.java
@@ -1,7 +1,6 @@
 package com.wearewaes.simple_bank_account.adapters.controllers;
 
 import com.wearewaes.model.AccountDTO;
-import com.wearewaes.model.AccountsBalanceDTO;
 import com.wearewaes.model.NewAccountDTO;
 import com.wearewaes.simple_bank_account.TestSetup;
 import org.junit.jupiter.api.DisplayName;
@@ -151,38 +150,6 @@ class AccountsControllerIT extends TestSetup {
 
                         assertNotNull(response);
                         assertEquals(accountDTO, response);
-                    });
-        }
-
-        @Test
-        @DisplayName("get a all accounts balance paginated")
-        void testGetAllAccountsBalance() throws Exception {
-            NewAccountDTO newAccount = generateNewAccount(true, "GKUYTÎˆ*GF%&");
-
-            String dtoJson = objectMapper.writeValueAsString(newAccount);
-
-            mockMvc.perform(MockMvcRequestBuilders.post("/accounts")
-                            .contentType(MediaType.APPLICATION_JSON)
-                            .content(dtoJson))
-                    .andExpect(MockMvcResultMatchers.status().isCreated());
-
-            mockMvc.perform(MockMvcRequestBuilders.get("/accounts/balance")
-                            .contentType(MediaType.APPLICATION_JSON)
-                    )
-                    .andExpect(MockMvcResultMatchers.status().isOk())
-                    .andExpect(result -> {
-                        AccountsBalanceDTO response = objectMapper
-                                .readValue(result.getResponse().getContentAsString(), AccountsBalanceDTO.class);
-
-                        assertNotNull(response);
-                        assertNotNull(response.getPageDetails());
-                        assertTrue(response.getPageDetails().getFirst());
-                        assertTrue(response.getPageDetails().getLast());
-                        assertEquals(20, response.getPageDetails().getSize());
-                        assertEquals(0, response.getPageDetails().getNumber());
-                        assertFalse(response.getAccountsBalance().isEmpty());
-                        assertNotNull(response.getAccountsBalance().getFirst().getAccountNumber());
-                        assertEquals(0, response.getAccountsBalance().getFirst().getBalance());
                     });
         }
 
