# src/main/java/com/wearewaes/simple_bank_account/adapters/controllers/AccountsController.java
@@ -2,7 +2,6 @@ package com.wearewaes.simple_bank_account.adapters.controllers;
 
 import com.wearewaes.api.AccountsApi;
 import com.wearewaes.model.AccountDTO;
-import com.wearewaes.model.AccountsBalanceDTO;
 import com.wearewaes.model.NewAccountDTO;
 import com.wearewaes.simple_bank_account.domain.services.AccountsService;
 import com.wearewaes.simple_bank_account.domain.services.GetAccountService;
@@ -29,10 +28,5 @@ public class AccountsController extends ControllerAdvice implements AccountsApi 
     @Override
     public ResponseEntity<AccountDTO> getAccount(String accountNumber) {
         return ResponseEntity.ok(getAccountService.getAccount(accountNumber));
-    }
-
-    @Override
-    public ResponseEntity<AccountsBalanceDTO> getAllAccountsBalance(Integer offset, Integer limit) {
-        return ResponseEntity.ok(getAccountService.getAllAccountsBalance(offset, limit));
     }
 }
