# src/main/resources/swagger.yaml
@@ -40,6 +40,44 @@ paths:
                 $ref: '#/components/schemas/CardFeeDTO'
         400:
           description: Invalid data provided
+  /admin/accounts/balance:
+    get:
+      tags:
+        - admin
+      summary: Get all accounts balance
+      description: Here you may get the balance of all accounts
+      operationId: getAllAccountsBalance
+      security:
+        - BearerAuth: []
+      parameters:
+        - in: query
+          name: offset
+          required: false
+          schema:
+            type: integer
+            minimum: 0
+            default: 0
+            description: The number of items to skip before starting to collect the result set.
+        - in: query
+          name: limit
+          required: false
+          schema:
+            type: integer
+            minimum: 1
+            maximum: 50
+            default: 20
+          description: The numbers of items to return.
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AccountsBalanceDTO'
+        401:
+          description: Unauthorized
+        403:
+          description: Forbidden
   /accounts:
     post:
       tags:
@@ -86,45 +124,6 @@ paths:
           description: Forbidden
         404:
           description: Account not found
-
-  /accounts/balance:
-    get:
-      tags:
-        - accounts
-      summary: Get all accounts balance
-      description: Here you may get the balance of all accounts
-      operationId: getAllAccountsBalance
-      security:
-        - BearerAuth: []
-      parameters:
-        - in: query
-          name: offset
-          required: false
-          schema:
-            type: integer
-            minimum: 0
-            default: 0
-            description: The number of items to skip before starting to collect the result set.
-        - in: query
-          name: limit
-          required: false
-          schema:
-            type: integer
-            minimum: 1
-            maximum: 50
-            default: 20
-          description: The numbers of items to return.
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AccountsBalanceDTO'
-        401:
-          description: Unauthorized
-        403:
-          description: Forbidden
 
   /transactions/withdraw:
     post:
